<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WA(CN)</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading</string>
    <string name="app_error">Application error!</string>
    <string name="searching">Searching&#8230;</string>
    <string name="waiting">Waiting&#8230;</string>

    <!-- 首页 -->
    <string name="enable_logcat">Enable logcat</string>
    <string name="disable_logcat">Disable logcat</string>
    <string name="enable_extend">Enable AppWall</string>
    <string name="disable_extend">Disable AppWall</string>
    <string name="a360">360</string>
    <string name="baidu">百度</string>
    <string name="uc">UC</string>
    <string name="meizu">MEIZU</string>
    <string name="ysdk_login">应用宝登录</string>
    <string name="oppo_login">OPPO登录</string>
    <string name="vivo_login">VIVO登录</string>
    <string name="xiaomi_login">小米登录</string>
    <string name="huawei_login">华为登录</string>
    <string name="qihoo360_login">360登录</string>
    <string name="baidu_login">百度登录</string>
    <string name="uc_login">UC登录</string>
    <string name="meizu_login">MEIZU登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="test_crash">Test Crash</string>
    <string name="check_update">Check Update</string>
    <string name="download_patch">Download Patch</string>
    <string name="login_ui">Login UI</string>
    <string name="test_crash_warming">Test crash will make application crash, are you continue?</string>
    <string name="hot_update">Hot Update</string>
    <string name="warming">warming</string>

    <string name="show_float_view">显示悬浮窗</string>
    <string name="hidden_float_view">隐藏悬浮窗</string>

    <!-- 数据收集 -->
    <string name="parameters">Parameters</string>
    <string name="add_parameter">Add parameter</string>
    <string name="tracking">Tracking</string>
    <string name="send_tracking">Send Tracking</string>
    <string name="send">Send</string>
    <string name="event_send">Event Send</string>

    <!-- 登录 -->
    <string name="enable_login_cache">Enable Login Cache</string>
    <string name="disable_login_cache">Disable Login Cache</string>
    <string name="rebind_account_with_device">Rebind the login account with device</string>
    <string name="do_not_rebind_account_with_device">Do not rebind device on login</string>

    <!-- payUI -->
    <string name="pay_ui_title">Web Pay</string>

    <!-- -->
    <string name="login">WA Login</string>
    <string name="payment">payment</string>
    <string name="query_channel_balance">Query balance</string>
    <string name="invite">Invite</string>
    <string name="invite_ui">Invite(UI)</string>
    <string name="init_info_intent">Init info intent</string>
    <string name="upload_score">Upload score</string>
    <string name="share">Share</string>
    <string name="switch_account">Switch account</string>
    <string name="authenticate_state">Authenticate state</string>
    <string name="authenticate">Authenticate</string>
    <string name="rank">rank</string>
    <string name="logout">Logout</string>
    <string name="exit_game">Exit game</string>


    <string name="rank_friend">Friend Rank</string>
    <string name="global_rank">Global Rank</string>
    <string name="global_rank_ui">Global Rank UI</string>
    <string name="cls">"com.ddtankfcb.angame.wxapi.WXEntryActivity"</string>

    <!-- 客服系统-->
    <string name="showElva">启动机器人客服界面</string>
    <string name="showElvaOP">启动运营界面</string>
    <string name="showFAQs">展示全部FAQ菜单</string>
    <string name="showConversation">进入人工客服界面</string>
    <string name="setSDKLanguage">设置语言</string>
    <string name="showSingleFAQ">展示单条FAQ</string>
    <string name="csc">客服系统</string>
    <string name="showFAQSection">展示FAQ分类</string>
    <string name="input_sectionPublishId">输入SectionId,如:25448</string>
    <string name="input_faqId">请输入faqId,例如：8</string>
    <string name="wa_csc">客服系统</string>
    <string name="openAiHelp">调用callAiHelp</string>
    <string name="isOpenAiHelp">是否开启AiHelp</string>
    <string name="switchAiHelpVip">切换VIP</string>
    <!-- 账户管理 -->
    <string name="bind_account_cn">绑定账户</string>
    <string name="open_account_manager_page_cn">打开SDK内置账户管理页面</string>
    <!--  账号删除  -->
    <string name="account_deletion">Account Deletion</string>
    <string name="account_deletion_request_ui">Request Account Deletion UI</string>
    <string name="account_deletion_request">Request Account Deletion</string>
    <string name="account_deletion_cancel">Cancel Account Deletion</string>
    <string name="account_deletion_can_identify">Can Identify</string>
    <string name="account_deletion_identify_account">Identify Account</string>
</resources>
