<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <com.wa.sdk.cn.demo.widget.TitleBar
        android:id="@+id/tb_360"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_black_alpha_bb" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:padding="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/login"
                    android:onClick="onClick"
                    android:layout_gravity="center_horizontal"/>
                <Button
                    android:id="@+id/btn_pay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/payment"
                    android:onClick="onClick"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/btn_query_init_info_intent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/init_info_intent"
                    android:onClick="onClick"
                    android:layout_gravity="center_horizontal"/>
                <Button
                    android:id="@+id/btn_upload_score"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/upload_score"
                    android:onClick="onClick"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
            <!--<LinearLayout-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp">-->
                <!--<Button-->
                    <!--android:id="@+id/btn_invite"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_marginLeft="5dp"-->
                    <!--android:layout_marginStart="5dp"-->
                    <!--android:text="@string/invite"-->
                    <!--android:onClick="onClick"-->
                    <!--android:layout_gravity="center_horizontal"/>-->
                <!--<Button-->
                    <!--android:id="@+id/btn_invite_ui"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1"-->
                    <!--android:layout_marginLeft="5dp"-->
                    <!--android:layout_marginStart="5dp"-->
                    <!--android:text="@string/invite_ui"-->
                    <!--android:onClick="onClick"-->
                    <!--android:layout_gravity="center_horizontal"/>-->
            <!--</LinearLayout>-->
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/btn_tracking"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/tracking"
                    android:onClick="onClick"
                    android:layout_gravity="center_horizontal"/>
                <Button
                    android:id="@+id/btn_share"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/share"
                    android:onClick="onClick"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/btn_switch_account"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/switch_account"
                    android:onClick="onClick"
                    android:layout_gravity="center_horizontal"/>
                <Button
                    android:id="@+id/btn_query_authenticate_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/authenticate_state"
                    android:onClick="onClick"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/btn_rank"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/rank"
                    android:onClick="onClick"
                    android:layout_gravity="center_horizontal"/>
                <Button
                    android:id="@+id/btn_logout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/logout"
                    android:onClick="onClick"
                    android:layout_gravity="center_horizontal"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <Button
                    android:id="@+id/btn_exit_game"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/exit_game"
                    android:onClick="onClick"
                    android:layout_gravity="center_horizontal"/>
                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/logout"
                    android:onClick="onClick"
                    android:layout_gravity="center_horizontal"
                    android:visibility="invisible"/>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
