<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">
    <com.wa.sdk.cn.demo.widget.TitleBar
        android:id="@+id/tb_rank"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_black_alpha_bb" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp" >
        <Button
            android:id="@+id/btn_rank_friend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/rank_friend"
            android:onClick="onClick"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_global_rank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/global_rank"
            android:onClick="onClick"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_global_rank_ui"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/global_rank_ui"
            android:onClick="onClick"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vp"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:background="@color/colorBackground" />

</LinearLayout>
